# CloudPivot

./: .gitignore  .mcp.json  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-AUDIT-REPORT.md  README.md  TODOS.md  biome.json  justfile  mcp.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  设计文档整体评审报告.md  设计文档整体评审报告_bak.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/postgres/: 001_init.sql  002_seed_data.sql  003_production_orders.sql  004_drop_legacy_work_orders.sql  005_manual_stock_movements.sql  006_user_management.sql  007_viewer_revoke_manual_stock_checks.sql  008_viewer_revoke_replenishment_and_settings.sql  009_materials_import_export_permission.sql  010_operator_restrict_perms.sql  011_print_templates.sql  012_operator_revoke_stock_checks.sql  013_operator_revoke_manual_stock_confirm.sql  015_materials_packaging.sql  016_bom_cutting_details.sql  017_user_roles_and_department_roles.sql  018_replenishment_edit_rules_permission.sql
src-tauri/migrations/sqlite/: 004_production_orders.sql  006_materials_name_vi.sql
src-tauri/src/: auth.rs  error.rs  keychain.rs  lib.rs  menu.rs  operation_log.rs
src-tauri/src/commands/: bom.rs  category.rs  custom_order.rs  customer.rs  data_management.rs  finance.rs  inventory.rs  inventory_ops.rs  manual_stock_movement.rs  material.rs  mod.rs  order_shared.rs  perm.rs  print_template.rs  production_order.rs  purchase.rs  replenishment.rs  reports.rs  sales.rs  supplier.rs  unit.rs  (+2 more)
src-tauri/tests/: permission_guards.rs
(+327 files in other folders)
