[package]
name = "app"
version = "0.2.4"
description = "CloudPivot IMS — 越南家具工厂桌面端进销存系统"
authors = ["kurisu"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# 日志分发 — 按天按级别双文件写入（tauri-plugin-log 内部使用的同版本）
fern = "0.7"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 数据库 — PostgreSQL + 异步运行时
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
# 编译时加载 .env 文件
dotenvy = "0.15"
# 密码哈希
bcrypt = "0.17"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# UUID 生成
uuid = { version = "1", features = ["v4"] }
# 错误处理
thiserror = "2"
dirs = "6.0.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
